# chat-api

./: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  dev-requirements.txt  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  user-stories.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 02fe4e9c4c15_add_refresh_token_entity.py  aec6b39643db_initial_migration.py
app/: __init__.py  main.py
app/api/: __init__.py  chat.py  health.py  metrics.py  users.py
app/core/: __init__.py  auth.py  config.py  database.py  exception_handlers.py  exceptions.py  logging.py  request_utils.py
app/models/: __init__.py  refresh_token.py  user.py
app/repositories/: refresh_token_repository.py  user_repository.py
app/schemas/: chat.py  user.py
app/services/: chat_service.py  user_repository.py  user_service.py
code/: README.md  pyproject.toml
code/.github/: copilot-instructions.md
code/app/: main.py
code/app/api/: hello.py
code/tests/: test_hello.py
docker-entrypoint-initdb.d/: 10-multi-db.sh  init-multiple-dbs.sh
docs/: user-stories.md
scripts/: create_migration.sh
tests/: utils.py
tests/integration/: conftest.py  test_api_chat.py  test_api_health.py  test_api_metrics.py  test_api_users.py
tests/unit/: test_auth.py  test_chat_schema.py  test_chat_service.py  test_cookie_dependencies.py  test_core_auth.py  test_database.py  test_exception_handlers.py  test_logging.py  test_refresh_token_repository.py  test_request_utils.py  test_security_headers.py  test_user_model.py  test_user_repository.py  test_user_schema.py  test_user_service.py
