[tool.poetry]
name = "chat-api"
version = "0.1.0"
description = "A FastAPI REST API for chat services."
authors = ["Martin Krahl Vitale <m.krahl.vitale@gmail.com>"]

[[tool.poetry.packages]]
include = "app"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
starlette = "^0.36.3"
typing-extensions = "^4.11.0"
structlog = "^24.1.0"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
cython = "^3.0.10"
httpx = "^0.27.0"
isort = "^6.0.1"
pre-commit = "^3.7.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"
setuptools = "^69.2.0"
testcontainers = {extras = ["postgresql"], version = "^4.4.0", python = ">=3.13,<4.0"}
wheel = "^0.43.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
